--- a/style.css
+++ b/style.css
@@ -2,6 +2,20 @@ body{
     user-select: none;
 }
 
+.content{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+    display:flex;
+    align-self: center;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
 .sketch-grid{
     display: flex;
     flex-wrap: wrap;
@@ -9,5 +23,20 @@ body{
     height: 500px;
     border-style: solid;
     border-width: 2px;
-    margin: auto;
+}
+
+.ui{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 500px;
+}
+
+button{
+    width: 100%;
+    height: 50px;
+    border-radius: 20px;
+    background-color: orange;
+    font-weight: bolder;
 }
