--- a/style.css
+++ b/style.css
@@ -57,3 +57,15 @@ button{
 .last-bts button{
     width: 70px;
 }
+
+input[type="color"] {
+    border-style: none;
+    width: 40px;
+    height: 40px;
+}
+
+.container{
+    display: flex;
+    align-items: center;
+    gap: 10px
+}
